<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@id/deckListFragment"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_list_alt_24"
        android:title="@string/decks_nav_menu_title"/>
    <item
        android:id="@id/studyFragment"
        android:enabled="true"
        android:icon="@drawable/study"
        android:title="@string/study_nav_menu_title"/>
    <item
        android:id="@+id/statisticsFragment"
        android:enabled="true"
        android:icon="@drawable/statistics"
        android:title="@string/statistics_nav_menu_title"/>
    <item
        android:id="@+id/aboutFragment"
        android:enabled="true"
        android:icon="@drawable/info_card"
        android:title="@string/about_title"/>
</menu>