<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/question_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:textSize="20dp"
        android:text="@string/question_text"
        tools:text="Texto para el entorno"/>

    <Button
        android:id="@+id/check_answ_button"
        android:layout_below="@id/question_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/answer_button_text" />
    <Button
        android:layout_below="@id/check_answ_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/help_button_text" />

</RelativeLayout>