<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_login"
            android:textSize="16sp"
            tools:text="LOGIN/REGISTRO"
            android:layout_centerHorizontal="true"
            android:paddingTop="30pt"
            android:id="@+id/id_title"
            android:textStyle="bold"
            />
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/question_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/id_title"
            android:hint="@string/email_title_text"
            android:layout_marginHorizontal="50dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/email_field_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/answer_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/question_field"
            android:hint="@string/password_title_text"
            android:layout_marginHorizontal="50dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:inputType="textPassword">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password_field_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </com.google.android.material.textfield.TextInputLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/answer_field"
            android:layout_centerHorizontal="true">
            <Button
                android:id="@+id/acceder"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_button_text"
                android:textColor="@color/design_default_color_primary"
                android:layout_marginRight="10dp"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_below="@id/answer_field"
                android:layout_centerHorizontal="true"/>
            <Button
                android:id="@+id/registrarse"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/register_button_text"
                android:textColor="@color/design_default_color_primary"
                android:layout_marginLeft="10dp"
                android:layout_below="@id/answer_field"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_centerHorizontal="true"/>
        </LinearLayout>
    </RelativeLayout>
</layout>