<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="deck"
            type="es.uam.eps.dadm.cards.Deck" />
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="16dp"
        android:paddingTop="10dp"
        android:paddingRight="16dp"
        android:paddingBottom="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{@string/deck_edit_id_format(deck.id)}"
            android:textSize="16sp"
            tools:text="ID DEL MAZO"
            android:layout_centerHorizontal="true"
            android:id="@+id/id_title"
            android:textStyle="bold"
            />
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/name_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/id_title"
            android:hint="@string/deck_add_name_field"
            android:layout_marginHorizontal="50dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/name_field_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.button.MaterialButtonToggleGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/name_field"
            android:layout_centerHorizontal="true"
            android:paddingTop="30dp"
            >
            <Button
                android:id="@+id/card_edit_accept"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/accept_card_edit_button_title"
                android:textColor="@color/design_default_color_primary"
                android:layout_marginRight="10dp"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"/>
            <Button
                android:id="@+id/card_edit_cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cancel_card_edit_button_title"
                android:textColor="#E91E63"
                android:layout_marginLeft="10dp"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"/>
        </com.google.android.material.button.MaterialButtonToggleGroup>

    </RelativeLayout>
</layout>